--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
 == README
 
-Movie rating web application taught by @Mackenziechild at :https://www.youtube.com/watch?v=0DR5JLZ2Qgg 
+Movie rating web application taught by @Mackenziechild
