--- a/README.rdoc
+++ b/README.rdoc
@@ -5,5 +5,6 @@
  - Post Commnets
  - Add user authentication (gem device)
  - Add images (imagemagik gem)
+ - Strems.
 
 Movie rating web application taught by @Mackenziechild
